--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "fwf",
-  "version": "1.0.0",
-  "description": "NodeJS学习笔记",
-  "main": "index.js",
-  "dependencies": {
-    "codecov": "^1.0.1"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "fwf",
+    "version": "1.0.0",
+    "description": "NodeJS学习笔记",
+    "main": "index.js",
+    "dependencies": {
+        "codecov": "^1.0.1"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "node DemoOne/Hello.js"
+    },
+    "author": "",
+    "license": "ISC"
 }
