--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-    "name": "fwf",
-    "version": "1.0.0",
-    "description": "NodeJS学习笔记",
-    "main": "index.js",
-    "dependencies": {
-        "codecov": "^1.0.1"
-    },
-    "devDependencies": {},
-    "scripts": {
-        "test": "node DemoOne/Hello.js"
-    },
-    "author": "",
-    "license": "ISC"
+  "name": "UM007",
+  "version": "1.0.0",
+  "description": "NodeJS学习笔记",
+  "main": "index.js",
+  "dependencies": {
+    "codecov": "^1.0.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.4",
+    "mocha": "^3.0.2"
+  },
+  "scripts": {
+    "test": "istanbul cover node_modules/mocha/bin/_mocha"
+  },
+  "author": "",
+  "license": "ISC"
 }
