--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mocha": "^3.0.2"
   },
   "scripts": {
-    "test": "istanbul cover node_modules/mocha/bin/_mocha"
+    "test": "istanbul cover node_modules/mocha/bin/_mocha && codecov"
   },
   "author": "",
   "license": "ISC"
