--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/vim,node
+# Created by https://www.gitignore.io/api/vim,expressionengine,node
 
 ### Vim ###
 # swap
@@ -12,6 +12,28 @@ Session.vim
 *~
 # auto-generated tag files
 tags
+
+
+### ExpressionEngine ###
+.DS_Store
+
+# Images
+images/avatars/
+images/captchas/
+images/smileys/
+images/member_photos/
+images/signature_attachments/
+images/pm_attachments/
+
+# For security do not publish the following files
+system/expressionengine/config/database.php
+system/expressionengine/config/config.php
+
+# Caches
+sized/
+thumbs/
+_thumbs/
+*/expressionengine/cache/*
 
 
 ### Node ###
