--- a/ExpressDemo/hello/package.json
+++ b/ExpressDemo/hello/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ExpressDemo",
+  "name": "hello",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,8 +13,5 @@
     "hbs": "~4.0.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
-    "mongodb": "^2.2.5"
   }
 }
